--- a/schedule/src/app/schedule/add/add.component.html
+++ b/schedule/src/app/schedule/add/add.component.html
@@ -95,11 +95,18 @@
         <div class="modal-header">
           <h5 class="modal-title">周{{days[day]}}第{{bigLesson}}节</h5>
           <button type="button" class="close" data-dismiss="modal">
-            <span>123</span>
+              123
           </button>
         </div>
-        <div class="modal-body">
-          <h6>选择周:</h6>
+        <div class="modal-body row ">
+          <span class="col-4">选择周:&nbsp;
+            <span class="text-muted" style="font-size: 0.7em">(选择某个周再选择对应教室)</span>
+          </span>
+
+          <span class="col-8 text-right">
+            <button class="btn btn-outline-primary btn-sm">切换模式</button>
+          </span>
+
           <ul class="list-group list-group-horizontal">
             <ng-container *ngFor="let week of weeks" class="list-group-item">
               <button class="mr-1 border-white" style="font-size: 0.8em">第{{ week + 1 }}周</button>
