--- a/schedule/src/app/clazz/members/edit/edit.component.html
+++ b/schedule/src/app/clazz/members/edit/edit.component.html
@@ -1,15 +1,24 @@
-<form class="container-sm"  [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
-  <div class="mb-3 row">
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
+  <div class="form-group row">
     <label for="name" class="col-sm-4 text-right col-form-label"><code>*</code>名称</label>
     <div class="col-sm-8">
-      <input type="text" class="form-control col-sm-3" id="name" formControlName="name">
+      <input type="text" class="form-control col-sm-3 mr-3" id="name" formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
         <span *ngIf="!formGroup.get('name')?.errors?.studentNameUnique">格式不正确</span>
         <span *ngIf="formGroup.get('name')?.errors?.studentNameUnique">学生名已存在</span>
       </small>
     </div>
   </div>
-  <div class="mb-3 row">
+  <div class="form-group row">
+    <label class="col-sm-4 text-right col-form-label"><code>*</code>性别</label>
+    <div class="col-sm-8 mt-2">
+      <input [value]="false" type="radio"  name="sex" id="sex1"formControlName="sex">
+      <label for="sex1">男</label> &nbsp;
+      <input [value]="true" type="radio" name="sex" id="sex2" formControlName="sex">
+      <label for="sex2">女</label>
+    </div>
+  </div>
+  <div class="form-group row">
     <label for="sno" class="col-sm-4 text-right col-form-label"><code>*</code>学号</label>
     <div class="col-sm-8">
       <input type="text" class="form-control col-sm-3" id="sno" formControlName="sno">
@@ -19,23 +28,14 @@
       </small>
     </div>
   </div>
-  <div class="mb-3 row">
+  <div class="form-group row">
     <label for="clazz" class="col-sm-4 text-right col-form-label"><code>*</code>班级</label>
     <div class="col-sm-8">
       <app-clazz-select formControlName="clazzId" id="clazz"></app-clazz-select>
     </div>
   </div>
-  <div class="mb-3 row">
-    <label class="col-sm-4 text-right col-form-label"><code>*</code>性别</label>
-    <div class="col-sm-8">
-      <input [value]="true" type="radio"  name="sex" id="sex1"formControlName="sex">
-      <label for="sex1">男</label> &nbsp;
-      <input [value]="false" type="radio" name="sex" id="sex2" formControlName="sex">
-      <label for="sex2">女</label>
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <div class="offset-4">
+  <div class="form-group row">
+    <div class="offset-5">
       <button class="btn btn-primary" [disabled]="formGroup.invalid">
         <i class="fas fa-save"></i>保存
       </button>
