--- a/schedule/src/app/schedule/add/add.component.html
+++ b/schedule/src/app/schedule/add/add.component.html
@@ -93,7 +93,7 @@
     <div class="modal-dialog modal-xl">
       <div class="modal-content" >
         <div class="modal-header">
-          <h5 class="modal-title">周{{days[day]}}第{{bigLesson}}节</h5>
+<!--          <h5 class="modal-title">周{{days[day]}}第{{bigLesson}}节</h5>-->
           <button type="button" class="close" data-dismiss="modal">
             <span>123</span>
           </button>
