--- a/schedule/src/app/clazz/members/edit/edit.component.html
+++ b/schedule/src/app/clazz/members/edit/edit.component.html
@@ -31,7 +31,7 @@
   <div class="form-group row">
     <label for="clazz" class="col-sm-4 text-right col-form-label"><code>*</code>班级</label>
     <div class="col-sm-8">
-      <app-clazz-select formControlName="clazzId" id="clazz"></app-clazz-select>
+      <app-clazz-select formControlName="clazzId" id="clazz" [disabled]="true"></app-clazz-select>
     </div>
   </div>
   <div class="form-group row">
