--- a/schedule/src/app/timetable/timetable.component.html
+++ b/schedule/src/app/timetable/timetable.component.html
@@ -1,11 +1,17 @@
-<div class="row" [formGroup]="formGroup">
+<div class="row" [formGroup]="formGroup" *ngIf="term">
   <label class="col-form-label text-right ml-2"><code>*</code>教师</label>
   <select class=" selectpicker form-control col-sm-2 ml-3" formControlName="selectedTeacherId" (change)="onTeacherChange()" >
     <option [value]="999">全部教师</option>
     <option *ngFor="let teacher of allTeachers;" [value]="teacher.id">{{ teacher.name }}</option>
   </select>
+  <div class="col-md-9 mt-1">
+    <h4 class="text-right">学期：{{ term.name }}</h4>
+  </div>
 </div>
 <hr/>
+<h1 class="text-center mb-5 title-pt" style="margin-top: 90px" *ngIf="!term">
+  <label>请前往学期管理激活学期</label><br>
+</h1>
 <div class="row" *ngIf="this.formGroup.get('selectedTeacherId')?.value !== null">
   <div class="col-md-12">
     <table class="table table-striped table-bordered">
@@ -27,8 +33,11 @@
         <td *ngFor="let day of days;index as d">
           <div *ngIf="this.isShow[l][d]">
               <div>{{ this.content[l][d].course.name}}</div>
-              <div>周数: {{ this.content[l][d].weeks }}</div>
-              <div>教室: <label *ngFor="let room of this.content[l][d].rooms">{{ room.name }}&nbsp;</label></div>
+<!--              <div>周数: {{ this.content[l][d].weeks }}</div>-->
+<!--              <div>教室: <label *ngFor="let room of this.content[l][d].rooms">{{ room.name }}&nbsp;</label></div>-->
+              <div *ngFor="let roomsAndWeeks of this.roomsAndWeeks[l][d]">
+                <div *ngIf="roomsAndWeeks.rooms.length !== 0">第<label>{{ roomsAndWeeks.weeks }}</label>周在教室<label *ngFor="let room of roomsAndWeeks.rooms">{{ room.name }}</label></div>
+              </div>
               <div>班级: <label *ngFor="let clazz of this.content[l][d].clazzes">{{ clazz.name }}&nbsp;</label></div>
               <div>教师: <label *ngFor="let teacher of this.content[l][d].teachers">{{ teacher.name }}&nbsp;</label></div>
           </div>
