--- a/schedule/src/app/schedule/add/add.component.html
+++ b/schedule/src/app/schedule/add/add.component.html
@@ -94,7 +94,7 @@
 
     <div class="row col-sm-12">
       <div class="col">
-        <a type="submit" class="btn btn-primary">确定</a>
+        <button type="submit" (click)="onSubmit()" class="btn btn-primary">确定</button>
       </div>
     </div>
   </div>
