--- a/schedule/src/app/schedule/edit/edit.component.html
+++ b/schedule/src/app/schedule/edit/edit.component.html
@@ -5,7 +5,6 @@
     <input type="text" class="disabled" disabled [value]="course.name">
   </div>
 </div>
-
 <!--选择时间-->
 <div class="form-group row">
   <div class="col-sm-2">
@@ -38,7 +37,7 @@
         <th   class="col-sm-1">周{{day}}</th>
         <td  *ngFor="let bigLesson of bigLessons" class="col-sm-1 container-fluid">
           <div class="list-group">
-            <button class="list-group-item" (click)="showModel(d, bigLesson)"><h6>周{{day}}第{{bigLesson! + 1}}节</h6></button>
+            <button class="list-group-item" [ngClass]="{'list-group-item-primary': buttonActive(d, bigLesson)}" (click)="showModel(d, bigLesson)"><h6>周{{day}}第{{bigLesson! + 1}}节</h6></button>
           </div>
         </td>
       </tr>
@@ -92,7 +91,8 @@
           selectedRooms{{selectedRooms | json}}<br>
           disabledWeeks{{disabledWeeks | json}}<br>
           disabledRooms{{disabledRooms | json}}<br>
-          tempData{{tempData| json}}
+          tempData{{tempData| json}}<br>
+          smLessons{{smLessons | json}}
           <br><br>
         </div>
         <div class="modal-footer">
