--- a/schedule/src/app/dashboard/dashboard.component.html
+++ b/schedule/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,3 @@
-<button class="btn btn-success" (click)="switch()">切换</button><br>
 <h1 class="text-center mb-5 title-pt" style="margin-top: 90px">
-<!--  <label>{{ this.title }}欢迎您！</label><br>-->
-  <img *ngIf="isEr" src="./../../assets/images/er.png" style="width: 700px">
-  <img *ngIf="!isEr" src="./../../assets/images/properties.jpg" style="width: 700px">
+  <label>{{ this.title }}欢迎您！</label><br>
 </h1>
