--- a/schedule/src/app/clazz/members/members.component.html
+++ b/schedule/src/app/clazz/members/members.component.html
@@ -8,7 +8,6 @@
   </div>
   <div class="col-md-2">
     <a class="btn btn-primary mr-2" style="float: right" routerLink="add"><i class="fas fa-plus"></i>新增</a>
-    <a style="float: right" [routerLink]="'../../'" class="btn btn-primary">返回</a>
   </div>
 </div>
 <hr>
@@ -36,8 +35,8 @@
     <td>{{ student.sno }}</td>
     <td>{{ student.clazz?.name }}</td>
     <td>
-      <a class="btn btn-sm btn-primary" [routerLink]="'edit/' + student.id">编辑</a>
-      <a class="btn btn-sm btn-danger" (click)="onDelete(student)">删除</a>
+      <a class="btn btn-sm btn-primary" [routerLink]="'edit/' + student.id"><i class="fas fa-edit"></i>编辑</a>
+      <a class="btn btn-sm btn-danger" (click)="onDelete(student)"><i class="fas fa-trash"></i>删除</a>
     </td>
   </tr>
   </tbody>
