--- a/schedule/src/app/course/edit/edit.component.html
+++ b/schedule/src/app/course/edit/edit.component.html
@@ -20,7 +20,8 @@
   <div class="form-group row">
     <div class="offset-5">
       <a style="float: right" [routerLink]="'/course'" class="btn btn-primary">返回</a>
-      <button style="float: right" type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('hours')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
+      <button style="float: right" type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('hours')?.value" (click)="onSubmit()">
+        <i class="fas fa-save"></i>保存</button>&nbsp;&nbsp;
     </div>
   </div>
 </form>
