--- a/schedule/src/app/personal/personal.component.html
+++ b/schedule/src/app/personal/personal.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-2">
-    <a class="btn btn-primary" style="float: left" [routerLink]="'edit'"><i class="fas fa-pen"></i>修改个人信息</a>
+  <div class="col-md-3">
+    <a class="btn btn-primary" [routerLink]="'edit'"><i class="fas fa-edit"></i>修改个人信息</a>
   </div>
 </div>
 <div class="row">
