--- a/schedule/src/app/room/room.component.html
+++ b/schedule/src/app/room/room.component.html
@@ -28,8 +28,8 @@
     <td>{{ room.name }}</td>
     <td>{{ room.capacity }}</td>
     <td>
-      <a class="btn btn-sm btn-primary" [routerLink]="'/room/edit/' + room.id">编辑</a>
-      <a class="btn btn-sm btn-danger" (click)="onDelete(room.id!)">删除</a>
+      <a class="btn btn-sm btn-primary" [routerLink]="'/room/edit/' + room.id"><i class="fas fa-edit"></i>编辑</a>
+      <a class="btn btn-sm btn-danger" (click)="onDelete(room.id!)"><i class="fas fa-trash"></i>删除</a>
     </td>
   </tr>
   </tbody>
