--- a/schedule/src/app/teacher/teacher.component.html
+++ b/schedule/src/app/teacher/teacher.component.html
@@ -1,13 +1,13 @@
 <!--查询和添加-->
 <div class="row">
-  <div class="col-md-10">
+  <div class="col-md-8">
     <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
       <input type="text" class="form-control mr-3" placeholder="教师姓名" formControlName="searchName">
       <input type="text" class="form-control mr-3" placeholder="手机号" formControlName="searchPhone">
       <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
     </form>
   </div>
-  <div class="col-md-2">
+  <div class="col-md-4 text-right">
     <button class="btn btn-info"
             type="button"
             (click)="onImportButtonClick()">
@@ -39,8 +39,8 @@
     <td>{{ teacher.phone }}</td>
     <td>{{ teacher.sex | sex}}</td>
     <td>
-      <a class="btn btn-sm btn-primary" [routerLink]="'/teacher/edit/' + teacher.id">编辑</a>
-      <a class="btn btn-sm btn-danger" (click)="onDelete(teacher.id)">删除</a>
+      <a class="btn btn-sm btn-primary" [routerLink]="'/teacher/edit/' + teacher.id"><i class="fas fa-edit"></i>编辑</a>
+      <a class="btn btn-sm btn-danger" (click)="onDelete(teacher.id)"><i class="fas fa-trash"></i>删除</a>
     </td>
   </tr>
   </tbody>
