--- a/schedule/src/app/part/menu/menu.component.html
+++ b/schedule/src/app/part/menu/menu.component.html
@@ -1,9 +1,9 @@
 <ul class="menu">
   <li *ngFor="let menu of menus" class="border-bottom">
-    <a routerLink="{{ menu.url }}">
+    <a [routerLink]="menu.url">
       <div class="inner" [style.background-color]="getBackgroundColor(menu)" [style.color]="getTextColor(menu)">
-        <i [class]="menu.icon"></i>
-        &nbsp;&nbsp;&nbsp;&nbsp;<span>{{ menu.name }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <i [className]="'icon ' + menu.icon" ></i>
+        <span>{{ menu.name }}</span>
       </div>
     </a>
   </li>
