--- a/schedule/src/app/schedule/edit/edit.component.html
+++ b/schedule/src/app/schedule/edit/edit.component.html
@@ -19,9 +19,10 @@
         <button class="dropdown-item" type="button" (click)="updatePattern(false)">同步选择</button>
         <button class="dropdown-item" type="button" (click)="updatePattern(true)">定制选择</button>
       </div>
+      <span class="ml-5 mr-5 font-weight-bold">当前学时:&nbsp;&nbsp;{{ selectedData.length}}</span>
+      <span class="font-weight-bold">课程学时:&nbsp;&nbsp;{{ course?.hours}}</span>
     </div>
   </div>
-  <input disabled class="col col-3" value="当前学时: {{ selectedData.length}}">
 
 
   <div class="col-sm" style="float: right">
@@ -63,14 +64,11 @@
             <button class="btn border list-group-item" [ngClass]="{'bg-primary': smLessons.includes(1), 'text-white': smLessons.includes(1)}" (click)="onSmLessonsChange(1)" [disabled]="isSmLessonsDetermine">小节2</button>
             <button class="btn border list-group-item" [ngClass]="{'bg-primary': smLessons.includes(2), 'text-white': smLessons.includes(2)}" (click)="onSmLessonsChange(2)" [disabled]="bigLesson !== 4 || isSmLessonsDetermine">小节3</button>
           </ul>
-          <!--          <button class="btn btn-outline-primary btn-sm hide" (click)="onIsSmLessonsDetermineChange()">-->
-          <!--            {{ isSmLessonsDetermine ? '修改' : '确定' }}小节选择-->
-          <!--          </button>-->
         </div>
         <div class="modal-body">
           <div class=" row ">
-            <span class="col-4">选择周:&nbsp;
-              <span class="text-muted" style="font-size: 0.7em">(选择某个周再选择对应教室)</span>
+            <span class="col-12">选择周:&nbsp;
+              <span class="text-muted" *ngIf="pattern" style="font-size: 0.7em">(选择某个周再选择对应教室，已占用周:&nbsp;{{getNotEmptyWeeks()}})</span>
             </span>
           </div>
           <ul class="list-group list-group-horizontal">
@@ -80,7 +78,7 @@
           </ul><br>
 
           <div *ngIf="week !== undefined || !pattern">
-            <h6>选择教室<span class="text-muted" style="font-size: 0.7em">(当前周:{{week! + 1}})</span>:</h6>
+            <h6>选择教室<span class="text-muted" *ngIf="pattern" style="font-size: 0.7em">(周:{{week! + 1}})</span>:</h6>
             <ul class="list-group list-group-horizontal">
               <ng-container *ngFor="let room of rooms" class="list-group-item">
                 <button [disabled]="isRoomDisabled(room.id!)" (click)="onRoomChange(room.id!)" [ngClass]="{'bg-primary': isRoomChecked(room.id!)}"  class="mr-1 border-white" [value]="room.id" style="font-size: 0.8em">{{ room.name }}</button>
