--- a/schedule/src/app/schedule/schedule.component.html
+++ b/schedule/src/app/schedule/schedule.component.html
@@ -28,14 +28,14 @@
   </thead>
   <tbody>
     <tr *ngFor="let schedule of pageData.content, index as index">
-      <td>{{schedule.id}}</td>
+      <td>{{index + 1}}</td>
       <td>{{schedule.course.name}}</td>
       <td>{{schedule.term.name}}</td>
       <td>{{getClazzNames(schedule.clazzes)}}</td>
       <td>{{schedule.teacher1.name + '、' + schedule.teacher2.name}}</td>
       <td>
         <a class="btn btn-sm btn-primary" [routerLink]="'edit/' + schedule.id"><i class="fas fa-edit"></i>编辑</a>
-        <a class="btn btn-sm btn-danger"><i class="fas fa-trash"></i>删除</a>
+        <a class="btn btn-sm btn-danger" (click)="onDelete(schedule.id)"><i class="fas fa-trash"></i>删除</a>
       </td>
     </tr>
   </tbody>
