--- a/schedule/src/app/timetable/timetable.component.html
+++ b/schedule/src/app/timetable/timetable.component.html
@@ -5,7 +5,8 @@
   <div class="col-md-3">
     <div class="row">
       <label class="col-form-label text-right col-md-4"><code>*</code>教师</label>
-      <select class="selectpicker form-control col-md-8" formControlName="selectedTeacherId" (change)="onTeacherChange()" >
+      <select class="selectpicker form-control col-md-8" formControlName="selectedTeacherId" (change)="onTeacherChange()">
+        <option [value]="'please'">请选择要查看课表的教师</option>
         <option [value]="'all'">全部教师</option>
         <option *ngFor="let teacher of allTeachers;" [value]="teacher.id">{{ teacher.name }}</option>
       </select>
@@ -46,9 +47,9 @@
         <td *ngFor="let day of days;index as d">
           <div *ngIf="this.isShow[l][d]">
             <div *ngFor="let schedule of this.content[l][d].schedules">
-              <div>{{ schedule.course.name }}</div>
+              <div style="color: red">{{ schedule.course.name }}</div>
               <div *ngFor="let roomsAndWeeks of this.roomsAndWeeks[l][d][schedule.id]">
-                <div *ngIf="roomsAndWeeks.rooms.length !== 0">第<label *ngFor="let week of roomsAndWeeks.weeks">{{ week + 1 }}&nbsp;</label>周在教室<label *ngFor="let room of roomsAndWeeks.rooms">{{ room.name }}&nbsp;</label></div>
+                <div style="color: green; font-size: large" *ngIf="roomsAndWeeks.rooms.length !== 0">第<label *ngFor="let week of roomsAndWeeks.weeks">{{ week + 1 }}&nbsp;</label>周在教室<label *ngFor="let room of roomsAndWeeks.rooms">{{ room.name }}&nbsp;</label></div>
               </div>
               <div>班级：<label *ngFor="let clazz of schedule.clazzes">{{ clazz.name }}&nbsp;</label></div>
               <div>教师：<label>{{ schedule.teacher1.name }}&nbsp;</label>
@@ -85,9 +86,9 @@
         <td *ngFor="let day of days;index as d">
           <div *ngIf="this.isShowForBigModel[l][d]">
             <div *ngFor="let schedule of this.bigModelContent[l][d].schedules">
-              <div>{{ schedule.course.name }}</div>
+              <div style="color: red">{{ schedule.course.name }}</div>
               <div *ngFor="let bigModelRoomsAndWeek of this.bigModelRoomsAndWeeks[l][d][schedule.id]">
-                <div *ngIf="bigModelRoomsAndWeek.rooms.length !== 0">第<label *ngFor="let week of bigModelRoomsAndWeek.weeks">{{ week + 1 }}&nbsp;</label>周在教室<label *ngFor="let room of bigModelRoomsAndWeek.rooms">{{ room.name }}&nbsp;</label></div>
+                <div style="color: green; font-size: large" *ngIf="bigModelRoomsAndWeek.rooms.length !== 0">第<label *ngFor="let week of bigModelRoomsAndWeek.weeks">{{ week + 1 }}&nbsp;</label>周在教室<label *ngFor="let room of bigModelRoomsAndWeek.rooms">{{ room.name }}&nbsp;</label></div>
               </div>
               <div>班级：<label *ngFor="let clazz of schedule.clazzes">{{ clazz.name }}&nbsp;</label></div>
               <div>教师：<label>{{ schedule.teacher1.name }}&nbsp;</label>
