学生管理查看班级成员

--- a/schedule/src/app/student/student.component.html
+++ b/schedule/src/app/student/student.component.html
@@ -3,6 +3,7 @@
     <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
       <input type="text" class="form-control mr-3" placeholder="学生姓名" formControlName="name">
       <input type="text" class="form-control mr-3" placeholder="学号" formControlName="sno">
+      <input type="text" class="form-control mr-3" placeholder="班级名称" formControlName="clazzName">
       <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
     </form>
   </div>
