--- a/schedule/src/app/clazz/clazz.component.html
+++ b/schedule/src/app/clazz/clazz.component.html
@@ -32,7 +32,7 @@
     <td>{{ +clazz.entranceDate * 1000 | date: 'yyyy-MM-dd'}}</td>
     <td>{{ clazz.getStudentNumber()}}</td>
     <td>
-      <a class="btn btn-sm btn-success" [routerLink]="'members/' + clazz.id"><i class="fas fa-users"></i>查看班级成员</a>
+<!--      <a class="btn btn-sm btn-success" [routerLink]="'members/' + clazz.id"><i class="fas fa-users"></i>查看班级成员</a>-->
       <a class="btn btn-sm btn-primary" [routerLink]="'edit/' + clazz.id"><i class="fas fa-edit"></i>编辑</a>
       <a class="btn btn-sm btn-danger" (click)="onDelete(clazz)"><i class="fas fa-trash"></i>删除</a>
     </td>
