--- a/schedule/src/app/schedule/add/add.component.html
+++ b/schedule/src/app/schedule/add/add.component.html
@@ -110,6 +110,16 @@
         <div class="modal-header">
           <h5 class="modal-title">周{{days[day!]}}第{{bigLesson! + 1}}节</h5>
           <ul class="list-group list-group-horizontal ml-5">
+<!--            <button class="btn border list-group-item"-->
+<!--                    [ngClass]="{'bg-primary': isAllWeekChecked(), 'text-white': isAllWeekChecked()}"-->
+<!--                    (click)="checkAllWeek()"-->
+<!--                    *ngIf="!pattern"-->
+<!--            >周全选</button>-->
+<!--            <button class="btn border list-group-item mr-3"-->
+<!--                    [ngClass]="{'bg-primary': isAllRoomChecked(), 'text-white': isAllRoomChecked()}"-->
+<!--                    (click)="checkAllRoom()"-->
+<!--            >教室全选</button>-->
+<!--            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
             <button class="btn border list-group-item" [ngClass]="{'bg-primary': smLessons.includes(0), 'text-white': smLessons.includes(0)}" (click)="onSmLessonsChange(0)" [disabled]="isSmLessonsDetermine">小节1</button>
             <button class="btn border list-group-item" [ngClass]="{'bg-primary': smLessons.includes(1), 'text-white': smLessons.includes(1)}" (click)="onSmLessonsChange(1)" [disabled]="isSmLessonsDetermine">小节2</button>
             <button class="btn border list-group-item" [ngClass]="{'bg-primary': smLessons.includes(2), 'text-white': smLessons.includes(2)}" (click)="onSmLessonsChange(2)" [disabled]="bigLesson !== 4 || isSmLessonsDetermine">小节3</button>
@@ -126,7 +136,9 @@
           </div>
           <ul class="list-group list-group-horizontal">
             <ng-container *ngFor="let w of weeks" class="list-group-item">
-              <button [disabled]="isWeekDisabled(w)" (click)="onWeekChange(w)" [ngClass]="{'bg-primary': w === week || selectedWeeks.includes(w)}" class="mr-1 border-white" style="font-size: 0.8em">第{{ w! + 1 }}周</button>
+              <button [disabled]="isWeekDisabled(w)" (click)="onWeekChange(w)"
+                      [ngClass]="{'bg-primary': w === week || selectedWeeks.includes(w)}"
+                      class="mr-1 border-white yzRound" style="font-size: 0.8em">第{{ w! + 1 }}周</button>
             </ng-container>
           </ul><br>
 
@@ -134,15 +146,17 @@
             <h6>选择教室<span class="text-muted" *ngIf="pattern" style="font-size: 0.7em">(周:{{week! + 1}})</span>:</h6>
             <ul class="list-group list-group-horizontal">
               <ng-container *ngFor="let room of rooms" class="list-group-item">
-                <button [disabled]="isRoomDisabled(room.id!)" (click)="onRoomChange(room.id!)" [ngClass]="{'bg-primary': isRoomChecked(room.id!)}"  class="mr-1 border-white" [value]="room.id" style="font-size: 0.8em">{{ room.name }}</button>
+                <button [disabled]="isRoomDisabled(room.id!)" (click)="onRoomChange(room.id!)"
+                        [ngClass]="{'bg-primary': isRoomChecked(room.id!)}"
+                        class="mr-1 border-white yzRound" [value]="room.id" style="font-size: 0.8em">{{ room.name }}</button>
               </ng-container>
             </ul>
           </div>
-          selectedWeeks{{selectedWeeks | json}}<br>
-          selectedRooms{{selectedRooms | json}}<br>
-          disabledWeeks{{disabledWeeks | json}}<br>
-          disabledRooms{{disabledRooms | json}}<br>
-          tempData{{tempData| json}}
+<!--          selectedWeeks{{selectedWeeks | json}}<br>-->
+<!--          selectedRooms{{selectedRooms | json}}<br>-->
+<!--          disabledWeeks{{disabledWeeks | json}}<br>-->
+<!--          disabledRooms{{disabledRooms | json}}<br>-->
+<!--          tempData{{tempData| json}}-->
           <br><br>
         </div>
         <div class="modal-footer">
