--- a/schedule/src/app/student/student.component.html
+++ b/schedule/src/app/student/student.component.html
@@ -1,13 +1,15 @@
 <div class="row">
-  <div class="col-md-8">
-    <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
-      <input type="text" class="form-control mr-3" placeholder="学生姓名" formControlName="name">
-      <input type="text" class="form-control mr-3" placeholder="学号" formControlName="sno">
-      <input type="text" class="form-control mr-3" placeholder="班级名称" formControlName="clazzName">
-      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
-    </form>
+  <div class="col-md-9">
+    <div class="row">
+        <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
+          <input type="text" class="col-3 form-control mr-3" placeholder="学生姓名" formControlName="name">
+          <input type="text" class="col-3 form-control mr-3" placeholder="学号" formControlName="sno">
+          <input type="text" class="col-3 form-control mr-3" placeholder="班级名称" formControlName="clazzName">
+          <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
+        </form>
+    </div>
   </div>
-  <div class="col-md-4 text-right">
+  <div class="col-md-3 text-right">
     <button class="btn btn-info"
             type="button"
             (click)="onImportButtonClick()">
