--- a/schedule/src/app/teacher/add/add.component.html
+++ b/schedule/src/app/teacher/add/add.component.html
@@ -8,8 +8,8 @@
   <div class="form-group row">
     <label class="col-sm-4 text-right col-form-label"><code>*</code>性别</label>
     <div class="col-sm-8 mt-2">
-      <input type="radio" name="sex" formControlName="sex" [value]="0" id="sex0" /><label>男</label>&nbsp;&nbsp;&nbsp;
-      <input type="radio" name="sex" formControlName="sex" [value]="1" id="sex1" /><label>女</label>
+      <input type="radio" name="sex" formControlName="sex" [value]="true" id="sex0" /><label for="sex0">男</label>&nbsp;&nbsp;&nbsp;
+      <input type="radio" name="sex" formControlName="sex" [value]="false" id="sex1" /><label for="sex1">女</label>
     </div>
   </div>
   <div class="form-group row">
