--- a/schedule/src/app/teacher/add/add.component.html
+++ b/schedule/src/app/teacher/add/add.component.html
@@ -3,6 +3,9 @@
     <label class="col-sm-4 text-right col-form-label"><code>*</code>姓名</label>
     <div class="col-sm-8">
       <input type="text" class="form-control col-sm-3" formControlName="name">
+      <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
+        <span>格式不正确</span>
+      </small>
     </div>
   </div>
   <div class="form-group row">
